# SALAM1BOT

./: .env.example  .replit  README.md  SETUP.md  config.py  cookies.txt.example  main.py  main_simple.py  pyproject.toml  replit.md  requirements.txt  test_imports.py
.local/state/replit/agent/: .latest.json  progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--2025-08-17-20-29-36-104-bot-youtube-processor-INFO-Starting-download-for-URL-https-www-yo-1755462627158_1755462627159.txt  Pasted--ExtractAudio-Destination-temp-downloads-F3YD-ROLE-MODEL-Official-Music-Video-mp3-2025-08-10--1754846932644_1754846932645.txt  Pasted-2025-08-19-00-42-23-167-main-INFO-Starting-YouTube-to-MP3-Bot-with-unlimited-concurrency--1755564226741_1755564226743.txt  Pasted-2025-08-19-00-45-54-251-bot-youtube-processor-INFO-Stored-main-loop-reference-UnixSelectorE-1755564366213_1755564366214.txt  Pasted-FO-Application-started-2025-08-19-00-50-19-486-bot-youtube-processor-INFO-Stored-main-loop--1755564627361_1755564627361.txt  Pasted-Running-the-code-in-my-project-results-in-the-following-started-If-applicable-propose-a-fix-im-1759707691596_1759707691597.txt
bot/: handlers.py  utils.py  youtube_processor.py
temp_downloads/: 1755563709_GF9C_hIBeyU_Derya Uluğ & Asil Gök - Yansıma.webm  BLOK3 - NAPIYOSUN MESELA ？ (Official Music Video).mp4.part
