[project]
name = "telegram-youtube-bot"
version = "0.1.0"
description = "Telegram bot that converts YouTube videos to MP3"
requires-python = ">=3.11"
dependencies = [
    "eyed3>=0.9.8",
    "ffmpeg-python>=0.2.0",
    "python-telegram-bot==20.8",
    "telegram>=0.0.1",
    "yt-dlp>=2023.12.30",
]

[tool.uv]
package = false
